# compliance-engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: README.md
compliance/: README.md
compliance-frameworks/: catalog.yaml
contracts/: README.md  collection.job.schema.json  openapi.json  openapi.yaml  policy.evaluate.schema.json
docs/: AZURE_SCAN_TROUBLESHOOTING.md  AZURE_SUBSCRIPTION_ONBOARDING.md  DEV_DOCKER.md  LINKS.md
findings/: README.md
inventory/: README.md
notifications/: README.md
policy/: README.md
postman/: Platform-V2-API.postman_collection.json  README.md
scripts/: build_policy_catalog.py  export_openapi.py  generate_postman_collection.py  import_dotenv.ps1  load_repo_dotenv.py  promote_membership_role.py  run_api.py  run_ingest_worker.py  run_phase1_e2e.py  run_phase1_local_pipeline.py  run_phase2_e2e.py  run_phase3_e2e.py  run_policy_worker.py  seed_dev_tenant.py  seed_identity_membership.py  start_platform_v2.ps1  start_platform_v2_real.ps1  stop_platform_v2.ps1  sync_policy_remediation.py  sync_postman_env.py  verify_sandbox_assume_role.py
tests/: README.md  conftest.py  migration_paths.py  test_azure_auth_errors.py  test_azure_core_policies.py  test_azure_integrations.py  test_azure_mock_pipeline.py  test_azure_normalizer.py  test_azure_phase0.py  test_compliance_frameworks.py  test_compliance_mapper.py  test_customer_experience.py  test_finding_remediation.py  test_hmac_jwt.py  test_iam_normalizer.py  test_identity.py  test_ingest_integration_invalid.py  test_p5_compute_policies.py  (+9 more)
(+188 files in other folders)
