[project]
name = "compliance-engine"
version = "0.1.0"
description = "Platform V2 backend — inventory, policy, findings, compliance, API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
