[project]
name = "platform-backend"
version = "0.5.0"
description = "Platform V2 backend — inventory, policy, findings, compliance, API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "asyncpg>=0.30,<1",
  "redis>=5.2,<6",
  "cryptography>=44,<45",
  "python-multipart>=0.0.18,<1",
  "boto3>=1.35,<2",
  "pyyaml>=6.0,<7",
  "PyJWT[crypto]>=2.10,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "httpx>=0.28,<1",
  "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
